...
    var addNoteButton: some View {
        Button(action: {
            router.navigate(to: .push(.newNote))
        }) {
            
            HStack {
                Text("Add Note")
                    .font(.headline)
                    .foregroundColor(themeManager.current.textPrimary)
                    .frame(height: 40)
                    .padding(5)
            }
            .padding(.horizontal, 10)
...
